intros/styles.css
body{
    background-color:goldenrod;
}


#mainCanvas{
    border-radius: 1%;
    height: auto;
    width:100%;
    padding: 1px;
    background: white;
    /* image-rendering: -moz-crisp-edges;     */
    /* image-rendering: -webkit-crisp-edges;  */
    /* image-rendering: pixelated; */
}

#animationContainer{
    background:black;
    padding-top: 65px;
    /* to compensate for space occupied by navbar */
    padding-right:10vw;
    padding-left:10vw;
}

#animationControls{
    padding-bottom:5px;
    padding-top:5px;
}

.navbarLogo{
    width:32px;
    height:32px;
}

/* Full screen settings begin*/
#wrapper.fullscreen{
    z-index: 9999;
    position: fixed;
}
#animationContainer.fullscreen{
    z-index: 9999; 
    width: 100vw; 
    height: 100vh; 
    position: relative; 
    top: 0; 
    left: 0; 
    padding-right: 20px;
    padding-left:20px;
    padding-top: 0px;
    margin:none;
 }
 #mainCanvas.fullscreen{
    z-index: 9999; 
    width: 100%; 
    height: 85%; 
    position: relative; 
    top: 0; 
    left: 0; 
 }
/* End of full screen settings */

